overflow on grid for float clearing;fixed inequility logic for vertical dragging and swiping

--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -99,6 +99,10 @@ img[src="img/history_icon_gray.png"]
 	font-size: 9pt;
 	line-height: 15px;
 }
+.grid
+{
+	overflow: auto;
+}
 
 .gridwrapper {
 	overflow-x: hidden;
